learn chap06 GeoQuiz

--- a/LearnBook/GeoQuiz/src/main/res/values/strings.xml
+++ b/LearnBook/GeoQuiz/src/main/res/values/strings.xml
@@ -17,4 +17,9 @@
     <string name="correct_toast">Correct!</string>
     <string name="incorrect_toast">Incorrect!</string>
 
+    <string name="warning_text">Are you sure you want to do this?</string>
+    <string name="show_answer_button">Show Answer</string>
+    <string name="cheat_button">Cheat!</string>
+    <string name="judgment_toast">Cheating is wrong.</string>
+
 </resources>
