--- a/LearnBook/CriminalIntent/src/main/res/values-zh-rCN/strings.xml
+++ b/LearnBook/CriminalIntent/src/main/res/values-zh-rCN/strings.xml
@@ -5,4 +5,5 @@
     <string name="crime_details_label">详情</string>
     <string name="crime_solved_label">已解决</string>
     <string name="call_police">联系警方</string>
+    <string name="date_format">EEEE,yyyy/MM/dd  HH:mm:ss</string>
 </resources>
