learn chap14 Toolbar CriminalIntent

--- a/LearnBook/CriminalIntent/src/main/res/values/strings.xml
+++ b/LearnBook/CriminalIntent/src/main/res/values/strings.xml
@@ -6,4 +6,5 @@
     <string name="crime_solved_label">Solved</string>
     <string name="call_police">Call Police</string>
     <string name="date_format">EEEE,yyyy/MM/dd  HH:mm:ss</string>
+    <string name="new_crime">New Crime</string>
 </resources>
