--- a/LearnBook/CriminalIntent/src/main/res/values-zh-rCN/strings.xml
+++ b/LearnBook/CriminalIntent/src/main/res/values-zh-rCN/strings.xml
@@ -6,4 +6,5 @@
     <string name="crime_solved_label">已解决</string>
     <string name="call_police">联系警方</string>
     <string name="date_format">yyyy/MM/dd  HH:mm:ss</string>
+    <string name="new_crime">新建</string>
 </resources>
