learnBook chap20 Beatbox UnitTesting
通过单元测试，整合测试。build的插件版本升到最新才能通过

--- a/LearnBook/BeatBox/src/main/res/values-zh-rCN/strings.xml
+++ b/LearnBook/BeatBox/src/main/res/values-zh-rCN/strings.xml
@@ -1,4 +1,4 @@
 <resources>
     <string name="app_name">BeatBox</string>
-    <string name="play_speed">PlayBack Speed %d%%</string>
+    <string name="play_speed">播放速度 %d%%</string>
 </resources>
