--- a/LearnBook/PhotoGallery/src/main/res/values/strings.xml
+++ b/LearnBook/PhotoGallery/src/main/res/values/strings.xml
@@ -1,3 +1,6 @@
 <resources>
     <string name="app_name">PhotoGallery</string>
+    <string name="search">Search</string>
+    <string name="clear_search">Clear Search</string>
+    <string name="loading_progress">Loading Progress</string>
 </resources>
