learn chap27 WorkManager PhotoGallery
1.添加了WorkManager依赖库：workManager的使用，设置启动的网络类型，执行一次性任务或者定期执行任务；
2.Worker 的实现：三种返回类型的具体含义；
3.注册通知渠道：registerNotificationChannel 相关的兼容包 NotificationManagerCompat 的使用 ；
4.通知的使用：PendingIntent的使用等；

--- a/LearnBook/PhotoGallery/src/main/res/values-zh-rCN/strings.xml
+++ b/LearnBook/PhotoGallery/src/main/res/values-zh-rCN/strings.xml
@@ -3,4 +3,10 @@
     <string name="search">搜索</string>
     <string name="clear_search">清除记录</string>
     <string name="loading_progress">加载进度</string>
+
+    <string name="notification_channel_name">FlickrFetchr</string>
+    <string name="new_pictures_title">新的图片</string>
+    <string name="new_pictures_text">你有了一张新的图片</string>
+    <string name="start_polling">开始轮询</string>
+    <string name="stop_polling">停止轮询</string>
 </resources>
