GeoQuiz 中文翻译错误

--- a/LearnBook/GeoQuiz/src/main/res/values-zh-rCN/strings.xml
+++ b/LearnBook/GeoQuiz/src/main/res/values-zh-rCN/strings.xml
@@ -5,7 +5,7 @@
     <string name="question_oceans">太平洋比大西洋面积大。</string>
     <string name="question_mideast">苏伊士运河连接红海和印度洋。</string>
     <string name="question_africa">尼罗河的源头在埃及。</string>
-    <string name="question_americas">最长的河流是在美洲的亚马逊河。</string>
+    <string name="question_americas">美洲最长的河流是亚马逊河。</string>
     <string name="question_asia">贝加尔湖是世界上最深和最古老的淡水湖。</string>
     <string name="true_button">正确</string>
     <string name="false_button">错误</string>
