Criminal 增加新的日期选择对话框和时间选择对话框
1.使用了navigation来传递参数
2.在代码中使用了接口实现方法调用自身时，会提示没有初始化，这时可以使用lazy来处理这个警告，如下
    private val mDateChangedListener: DatePicker.OnDateChangedListener by lazy {
        DatePicker.OnDateChangedListener { _, year, monthOfYear, dayOfMonth ->
            //如果不加上lazy 下面这行代码会提示mDateChangedListener没有被初始化
            mBinding.datePicker.init(year, monthOfYear, dayOfMonth, mDateChangedListener)
            mCalendar.set(year, monthOfYear, dayOfMonth)
        }
    }

--- a/LearnBook/CriminalIntent/src/main/res/values-zh-rCN/strings.xml
+++ b/LearnBook/CriminalIntent/src/main/res/values-zh-rCN/strings.xml
@@ -5,7 +5,8 @@
     <string name="crime_details_label">明细</string>
     <string name="crime_solved_label">是否解决</string>
     <string name="call_police">联系警方</string>
-    <string name="date_format">yyyy年MM月dd日  HH:mm:ss</string>
+    <string name="date_format">yyyy年MM月dd日</string>
+    <string name="time_format">HH:mm:ss</string>
     <string name="new_crime">新增crime记录</string>
     <string name="crime_suspect_text">嫌疑人联系方式</string>
     <string name="crime_report_text">抗议或投诉</string>
