--- a/LearnBook/CriminalIntent/src/main/res/values/strings.xml
+++ b/LearnBook/CriminalIntent/src/main/res/values/strings.xml
@@ -5,7 +5,8 @@
     <string name="crime_details_label">Details</string>
     <string name="crime_solved_label">Solved</string>
     <string name="call_police">Call Police</string>
-    <string name="date_format">EEEE,yyyy/MM/dd  HH:mm:ss</string>
+    <string name="date_format">EEEE,yyyy/MM/dd</string>
+    <string name="time_format">HH:mm:ss</string>
     <string name="new_crime">New Crime</string>
     <string name="crime_suspect_text">Choose Suspect</string>
     <string name="crime_report_text">Send Crime Report</string>
